auhal: prepare SPDIF transition from the packet API (refs [#8083](https://code.videolan.org/videolan/vlc/-/issues/8083))Note that you will hear silence atm, but at least it doesn't crash anymore and you can switch back to PCM mode
auhal: towards working S/PDIF outputNow, S/PDIF works at least in the sense that it plays something which "seems"to be in sync more or less.refs [#8083](https://code.videolan.org/videolan/vlc/-/issues/8083)