auhal: prepare SPDIF transition from the packet API (refs #8083)

Note that you will hear silence atm, but at least it doesn't crash anymore and you can switch back to PCM mode